--- a/lecture_3/advanced_regression.Rmd
+++ b/lecture_3/advanced_regression.Rmd
@@ -4,7 +4,7 @@ author: |
   | W. Evan Johnson, Ph.D.
   | Professor, Division of Infectious Disease
   | Director, Center for Data Science
-  | Co-Direcor, Center for Biomedical Informatics and Health AI
+  | Co-Director, Center for Biomedical Informatics and Health AI
   | Rutgers University -- New Jersey Medical School
 date: "`r Sys.Date()`"
 header-includes:
