--- a/worskshop_5/india_data_analysis.Rmd
+++ b/worskshop_5/india_data_analysis.Rmd
@@ -70,14 +70,18 @@ table(colData(indata)[,2:3])
 library(tidyverse)
 library(umap)
 
-pca_out <- prcomp(t(assay(se,"logCPM")))
-pca_plot <- data.frame(pca_out$x, Disease=se$disease_status)
-pca_plot %>% ggplot(aes(x=PC1, y=PC2, color=Disease)) + geom_point(size=1.5)
+pca_out <- prcomp(t(assay(indata,"log_combat_cpm")))
+pca_plot <- data.frame(pca_out$x, Disease=indata$Tb_status, 
+                       Nutrition=indata$bmi_cat2)
+pca_plot %>% ggplot(aes(x=PC1, y=PC2, color=Disease, shape=Nutrition)) +
+  geom_point(size=1.5)
 
 set.seed(1)
-umap_out <- umap(t(assay(se,"logCPM")))
-umap_plot <- data.frame(umap_out$layout, Disease=se$disease_status)
-umap_plot %>% ggplot(aes(x=X1, y=X2, color=Disease)) + geom_point(size=1.5)
+umap_out <- umap(t(assay(indata,"log_combat_cpm")))
+umap_plot <- data.frame(umap_out$layout, Disease=indata$Tb_status, 
+                       Nutrition=indata$bmi_cat2)
+umap_plot %>% ggplot(aes(x=X1, y=X2, color=Disease, shape=Nutrition)) +
+  geom_point(size=1.5)
 ```
 
 3.\  Use `DESeq2` to do a differential expression analysis (on the counts) comparing the TB to the LTBI samples adjusting for BMI status. What are the most differentially expressed genes? 
@@ -85,9 +89,9 @@ umap_plot %>% ggplot(aes(x=X1, y=X2, color=Disease)) + geom_point(size=1.5)
 
 ```{r, eval=F, include=F }  
 library(DESeq2)
-dds <- DESeqDataSetFromMatrix(countData = assay(se,"counts"), colData = colData(se), design = ~ disease_status)
+dds <- DESeqDataSetFromMatrix(countData = assay(indata,"combat"), colData = colData(indata), design = ~ Tb_status + bmi_cat2)
 dds <- DESeq(dds)
-res <- results(dds, contrast = c("disease_status", "TB-HIV", "HIV"))
+res <- results(dds, contrast = c("Tb_status", "TB", "LTBI"))
 top_genes_deseq <- res[head(order(res$pvalue), 50),]
 ```
 
@@ -95,21 +99,23 @@ top_genes_deseq <- res[head(order(res$pvalue), 50),]
  
 ```{r, eval=F, include=F }  
 library(ComplexHeatmap)
-mat = as.matrix(assay(se,"counts"))[order(results(dds)[,6])[1:50],] 
+mat = as.matrix(assay(indata,"log_combat_cpm"))[order(results(dds)[,6])[1:50],] 
 mat = t(scale(t(mat))) ## scale gene expression
-df=data.frame(Disease=colData(se)$disease_status) 
-ha = HeatmapAnnotation(df = df, col = list(Disease=c("TB-HIV"="Red", "HIV"="Blue")))
+df=data.frame(Disease=indata$Tb_status, 
+                       Nutrition=indata$bmi_cat2) 
+ha = HeatmapAnnotation(df = df, col = list(Disease=c("TB"="red", "LTBI"="blue"),
+                                           Nutrition=c("well"="purple", "mal"="yellow")))
 Heatmap(mat,show_row_names=F, show_column_names = F, top_annotation = ha)
 ```
   
-5.\ Conduct a pathway analysis of the top 50 DESeq2 genes using enrichR (through R or online). Use the "Reactome\_Pathways\_2024" database. What is are the top scoring pathways?
+5.\ Conduct a pathway analysis of the top 50 DESeq2 genes using enrichR (through R or online). Use the "Reactome\_Pathways\_2024" database. What are the top scoring pathways? (Extra) Use the TBSignatureProfiler to analyze the data! 
  
 
 ```{r, eval=F, include=F }  
 library(enrichR)
 setEnrichrSite("Enrichr")
 db_list <- listEnrichrDbs()
-genes <- rownames(limma_res)
+genes <- rownames(results(dds))[1:50]
 results <- enrichr(genes, databases = c("Reactome_Pathways_2024"))
 head(results[[1]])
 ```
